ALteração da escala

--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Louvores de domingo</title>
     <link rel="stylesheet" href="domingo-style.css">
+    <link rel="shorcut icon" href="Imagens/favicon-32x32.png">
 </head>
 <body>
     <main>
