--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tons favoritos</title>
     <link rel="stylesheet" href="tons-style.css">
-    
+    <link rel="shorcut icon" href="Imagens/favicon-32x32.png">
+
 </head>
 
 <body>
