--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Louvores-sexta/louvor-sexta.index.html">
     <link rel="stylesheet" href="Louvores-domingo/domingo-index.html">
     <link rel="stylesheet" href="Tons-favoritos/tons-index.html">
+  <link rel="shorcut icon" href="Imagens/favicon-32x32.png">
 </head>
 <body>
     <header class="header">
@@ -29,7 +30,7 @@
         <table>
             <thead class="head-tabela">
                 <tr>
-                    <th>Escala de fevereiro</th>
+                    <th>Escala de Janeiro</th>
                     <th>Voz principal</th>
                     <th>Back</th>
                     <th>Violão</th>
@@ -41,9 +42,9 @@
             </thead>
             <tbody class="corpo-tabela">
                 <tr>
-                    <td>Sexta</td>
-                    <td>Josi</td>
-                    <td>Kétanny Sarah Anny Jenifer</td>
+                    <td>Sexta 24</td>
+                    <td>Anny</td>
+                    <td>Kétanny Sarah Jenifer</td>
                     <td>Kétanny</td>
                     <td>Diego</td>
                     <td>-</td>
@@ -51,45 +52,26 @@
                     <td>Pr Kelton</td>
                 </tr>
                 <tr>
-                    <td>Domingo</td>
-                    <td>Josi</td>
-                    <td>Kétanny Sarah Anny Jenifer</td>
+                    <td>Domingo 26</td>
+                    <td>Jenifer</td>
+                    <td>Kétanny  Sarah  Anny  Josi  Pr Kelton</td>
                     <td>Kétanny</td>
-                    <td>Diego</td>
+                    <td>-</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>Pr Kelton</td>
+                    <td>Diego</td>
                 </tr>
                 <tr>
-                    <td>Sexta</td>
-                    <td>Josi</td>
-                    <td>Kétanny Sarah Anny Jenifer</td>
+                    <td>Sexta 31</td>
+                    <td>Sarah</td>
+                    <td>Kétanny Anny Jenifer Josi</td>
                     <td>Kétanny</td>
                     <td>Diego</td>
                     <td>-</td>
                     <td>Gustavo</td>
                     <td>Pr Kelton</td>
                 </tr>
-                <tr>
-                    <td>Domingo</td>
-                    <td>Josi</td>
-                    <td>Kétanny Sarah Anny Jenifer</td>
-                    <td>Kétanny</td>
-                    <td>Diego</td>
-                    <td>-</td>
-                    <td>Gustavo</td>
-                    <td>Pr Kelton</td>
-                </tr>
-                <tr>
-                    <td>Sexta</td>
-                    <td>Josi</td>
-                    <td>Kétanny Sarah Anny Jenifer</td>
-                    <td>Kétanny</td>
-                    <td>Diego</td>
-                    <td>-</td>
-                    <td>Gustavo</td>
-                    <td>Pr Kelton</td>
-                </tr>
+                
                 
             </tbody>
         </table>
