--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Louvores de sexta-feira</title>
     <link rel="stylesheet" href="louvor-sexta-style.css">
+    <link rel="shorcut icon" href="Imagens/favicon-32x32.png">
 </head>
 <body>
     <main>
