--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -6,6 +6,7 @@
     <title>Louvores de domingo</title>
     <link rel="stylesheet" href="domingo-style.css">
     <link rel="shorcut icon" href="Imagens/favicon-32x32.png">
+   
 </head>
 <body>
     <main>
@@ -31,5 +32,11 @@
 
        
     </main>
+    <footer>
+        <div class="rodape">
+            <h3><a href="file:///C:/Users/Diego%20Silva/OneDrive/%C3%81rea%20de%20Trabalho/Novo%20projeto/index.html" class="voltar-inicio">Voltar ao início</a></h3>
+        </div>
+    </footer>
+   
 </body>
 </html>
