--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -19,15 +19,18 @@
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="" target="_blank"></a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MAMdwxd_8qw?si=A04ZSsBdFIcsmbgD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="musica1"><a href="https://www.letras.mus.br/toque-no-altar/533478/" target="_blank">Olha pra mim</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/lv_4SGMQ2i0?si=MZmbbsjrvNPRxtRw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></iframe>
             </div>
 
-            <div class="musica2"><a href="" target="_blank"></a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MAMdwxd_8qw?si=A04ZSsBdFIcsmbgD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/thiago-gomes/digno-de-gloria-worthy-of-glory/" target="_blank">Digno de honra</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VESxnhPJyjc?si=L-FKd1tKSQmSyQDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="" target="_blank"></a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/MAMdwxd_8qw?si=A04ZSsBdFIcsmbgD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica3"><a href="https://www.letras.mus.br/ministerio-zoe/quando-a-luz-se-apagar/" target="_blank">Quando a luz se apagar</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/J6VQji4aIc4?si=8iB79eaDqu6SwwTk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></iframe></div>
+
+                <div class="musica3"><a href="https://www.letras.com/eyshila/227647/" target="_blank">Nenhuma condenação há</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/7s2N4S4O8Bk?si=XQIkhgjEzXkxW0ov" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
      
         </div>
 
