--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tons favoritos</title>
     <link rel="stylesheet" href="tons-style.css">
-    <link rel="shorcut icon" href="Imagens/favicon-32x32.png">
+    <link rel="shorcut icon" href="imagem/guitarra-eletrica 150 x 150.png">
 
 </head>
 
