--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Louvores-sexta/louvor-sexta.index.html">
     <link rel="stylesheet" href="Louvores-domingo/domingo-index.html">
     <link rel="stylesheet" href="Tons-favoritos/tons-index.html">
-  <link rel="shorcut icon" href="Imagens/favicon-32x32.png">
+  <link rel="shorcut icon" href="Imagem/favicon-32x32.png">
 </head>
 <body>
     <header class="header">
@@ -56,10 +56,10 @@
                     <td>Jenifer</td>
                     <td>Kétanny  Sarah  Anny  Josi  Pr Kelton</td>
                     <td>Kétanny</td>
-                    <td>-</td>
+                    <td>Diego</td>
                     <td>-</td>
                     <td>Gustavo</td>
-                    <td>Diego</td>
+                    <td>Pr Kelton</td>
                 </tr>
                 <tr>
                     <td>Sexta 31</td>
