Troquei as músicas

--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -96,6 +96,13 @@
                 <li>Quebrantado - Tom - C</li>
                 <li>Gratidão - Tom - D</li>
                 <li>Graças - Tom - Bm</li>
+                <li>Digon de honra - G</li>
+                <li>Eu me rendo - G</li>
+                <li>Aquele que está feliz - G</li>
+                <li>Meu prazer + Consagração + Aclame ao Senhor - E</li>
+                <li>Único + Que Ele cresça - G</li>
+                <li>O que tua glória fez comigo + Que Ele cresça - G</li>
+                <li>É Ele - G</li> 
             </ul>
         </div>
         <div class="Kétanny">
