--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 </tr>
                 <tr>
                     <td>Sexta 31</td>
-                    <td>Sarah</td>
-                    <td>Kétanny Anny Jenifer Josi</td>
+                    <td>Josi</td>
+                    <td>Kétanny Anny Jenifer Sarah</td>
                     <td>Kétanny</td>
                     <td>Diego</td>
                     <td>-</td>
@@ -80,6 +80,9 @@
      
    
  
- 
+ <script>
+    window.alert("Olá!!! Deus te abençoe!!!")
+    
+ </script>
 </body>
 </html>
