--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
                     <td>Gustavo</td>
                     <td>Pr Kelton</td>
                 </tr>
+                <tr>
+                    <td>Domigo (02)</td>
+                    <td>Josi</td>
+                    <td>Kétanny Anny Jenifer Sarah</td>
+                    <td>Kétanny</td>
+                    <td>Diego</td>
+                    <td>-</td>
+                    <td>Gustavo</td>
+                    <td>Pr Kelton</td>
+                </tr>
                 
                 
             </tbody>
