--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -13,21 +13,21 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (07)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (14)</h1>
 
         </div>
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/soraya-moraes/caminho-no-deserto-way-maker/" target="_blank">Caminho do deserto</a> <p class="nome">Tom <a href="https://www.cifraclub.com.br/soraya-moraes/caminho-no-deserto/" target="_blank" class="tom">B</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/n3qTisl_Unk?si=EpIBbbo8XzoIGocV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="musica1"><a href="https://www.letras.mus.br/marcos-goes/1005147/" target="_blank">Não vou calar meus lábios</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fCx1KZ3lIB4?si=3ZIb5EVFVsX-OnvN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/toque-no-altar/839914/" target="_blank">Sobre as águas</a> <p class="nome">Tom <a href="https://www.cifraclub.com.br/davi-sacer/sobre-as-aguas/#key=11" target="_blank" class="tom">G#</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Cyg9ykpG1Iw?si=WvSoX-9d24WlS9Oa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.cifraclub.com.br/ministerio-de-louvor-semear/na-uncao-de-deus-deus-dos-deuses-hino-da-vitoria/" target="_blank">Na unção de Deus + Deus dos deuses + Hino da vitória</a> <p class="nome">Tom<a href="https://www.cifraclub.com.br/ministerio-de-louvor-semear/na-uncao-de-deus-deus-dos-deuses-hino-da-vitoria/" target="_blank" class="tom">C</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/l_prFKqMxlU?si=lgkcpeV-EApI3PiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/eyshila/216085/" target="_blank">Posso clamar</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/ministerio-sarando-terra-ferida/posso-clamar/" target="_blank" class="tom">G</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VO7WUQnk-18?si=GBTisbR8qTCSsjOe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica3"><a href="https://www.letras.mus.br/familia-worship/em-teu-nome/" target="_blank">Em teu nome</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/family-worship/em-teu-nome/" target="_blank" class="tom">G</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/r-cBzZzJPSk?si=HLP3-wDLe7rPQkkE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
         </div>
 
