--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -22,8 +22,11 @@
                 <div class="musica1"><a href="https://www.cifraclub.com.br/lagoinha-niteroi/ate-que-o-senhor-venha-a-terra-clama-fogo-em-teus-olhos-pot-pourri/" target="_blank">Até que o Senhor venha + A terra clama + Fogo em teus olhos</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/PlUXFD_9jYs?si=eFu7pWmCNVzLYigU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                <div class="musica2"><a href="https://www.letras.mus.br/ministerio-zoe/ate-que-o-senhor-venha/" target="_blank">Até que o Senhor venha</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PpARIgVb2IE?si=Zyrr00hR-4LAW6dq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                <div class="musica2"><a href="https://www.letras.mus.br/laura-souguellis/em-teus-bracos/" target="_blank">Em teus braços</a> <p class="nome">Tom <a href="https://www.cifraclub.com.br/mauro-henrique/em-teus-bracos/" target="_blank" class="tom">C</a></p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IxpWNuxGmzc?si=UW0qH0wjWVNStmHY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+                    <div class="musica2"><a href="https://www.letras.com/marcelo-santos/1541858/" target="_blank">Cristo, o fiel amigo</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BnnOa2gcbs0?si=Y3nFRfeCZMnj2H7x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
       
     </main>
