--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -13,21 +13,21 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (14)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (21)</h1>
 
         </div>
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/marcos-goes/1005147/" target="_blank">Não vou calar meus lábios</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fCx1KZ3lIB4?si=3ZIb5EVFVsX-OnvN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="musica1"><a href="https://www.letras.mus.br/anderson-freire/1789576/" target="_blank">Jardim particular</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/eO9dUp5goWo?si=FeilhU5aNbU6Dy1K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-            <div class="musica2"><a href="https://www.cifraclub.com.br/ministerio-de-louvor-semear/na-uncao-de-deus-deus-dos-deuses-hino-da-vitoria/" target="_blank">Na unção de Deus + Deus dos deuses + Hino da vitória</a> <p class="nome">Tom<a href="https://www.cifraclub.com.br/ministerio-de-louvor-semear/na-uncao-de-deus-deus-dos-deuses-hino-da-vitoria/" target="_blank" class="tom">C</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/l_prFKqMxlU?si=lgkcpeV-EApI3PiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/nivea-soares/1984028/" target="_blank">Em tua presença</a> <p class="nome">Tom<a href="" target="_blank" class="tom"></a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zcWjnBQt3TI?si=x9i-uaQ3QJks8Zzs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/familia-worship/em-teu-nome/" target="_blank">Em teu nome</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/family-worship/em-teu-nome/" target="_blank" class="tom">G</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/r-cBzZzJPSk?si=HLP3-wDLe7rPQkkE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica3"><a href="https://www.letras.mus.br/luma-elpidio/eu-quebro-o-meu-vaso/" target="_blank">Eu quebro meu vaso</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3pfN_MyIdrA?si=1RZYL8YhZZA4r-jK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
         </div>
 
