--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -96,7 +96,7 @@
                 <li>Quebrantado - Tom - C</li>
                 <li>Gratidão - Tom - D</li>
                 <li>Graças - Tom - Bm</li>
-                <li>Digon de honra - G</li>
+                <li>Digno de honra - G</li>
                 <li>Eu me rendo - G</li>
                 <li>Aquele que está feliz - G</li>
                 <li>Meu prazer + Consagração + Aclame ao Senhor - E</li>
