--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -12,14 +12,16 @@
     <main>
         <div class="container">
             <img src="imagens/microphone-1074362_640.jpg" alt="" class="logo">
-            <h1 class="titulo">Louvores de Domingo (23)</h1>
+            <h1 class="titulo">Louvores de Domingo (02)</h1>
         </div>
+
+    <h2 class="romario">Romário e banda</h2>
         <div class="container-musicas">
 
             
             <div class="menu">
 
-                <div class="musica1"><a href="https://www.letras.mus.br/ronaldo-bezerra/324329/" target="_blank">Tu és Santo</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/michael-w-smith-musicas/tu-es-santo-principe-da-paz/#key=8" target="_blank" class="tom">F</a></p>
+              <!--  <div class="musica1"><a href="https://www.letras.mus.br/ronaldo-bezerra/324329/" target="_blank">Tu és Santo</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/michael-w-smith-musicas/tu-es-santo-principe-da-paz/#key=8" target="_blank" class="tom">F</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/gKY85RvJPsE?si=Y8gLSF0n_GuJCTac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
                 <div class="musica2"><a href="https://www.letras.mus.br/aline-barros/127758/" target="_blank">Digno é o Senhor</a> <p class="nome">Tom <a href="https://www.cifraclub.com.br/aline-barros/digno-o-senhor--/#key=7" target="_blank" class="tom">E</a></p>
@@ -38,7 +40,7 @@
                         <p class="nome">Tom<a href="https://www.cifraclub.com.br/florianopolis-house-of-prayer/uma-vez/" target="_blank" class="tom">D</a>
                         </p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/BYk00Jc7mEs?si=BZJNtpj4LIWvhQA6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        </div>
+                        </div>-->
 
       
     </main>
