--- a/Tons-favoritos/tons-index.html
+++ b/Tons-favoritos/tons-index.html
@@ -80,7 +80,7 @@
             <ul>
                 <li>Os que esperam - Tom - D</li>
                 <li>Vem Espírito de Deus - Tom - E</li>
-                <li>Sopra Espírito - Tom E</li>
+                <li>Sopra Espírito - Tom - E</li>
                 <li>Em Espírito em verdade - Tom - E</li>
                 <li>Estamos de pé - Tom - A</li>
                 <li>Único - Tom - G</li>
@@ -102,7 +102,13 @@
                 <li>Meu prazer + Consagração + Aclame ao Senhor - E</li>
                 <li>Único + Que Ele cresça - G</li>
                 <li>O que tua glória fez comigo + Que Ele cresça - G</li>
-                <li>É Ele - G</li> 
+                <li>Tú És Santo - F</li>
+                <li>Digno é o Senhor - E</li>
+                <li>É ele - D</li>
+                <li>Hó quaão lindo esse nome é - D</li>
+                <li>Tu és - D</li>
+                <li>Nada mais - D</li>
+               
             </ul>
         </div>
         <div class="Kétanny">
