--- a/index.html
+++ b/index.html
@@ -95,13 +95,7 @@
                 
                 <tr>
                     <td>Domingo 02</td>
-                    <td>Josi</td>
-                    <td>Kétanny Anny Sarah Jenifer</td>
-                    <td>Kétanny</td>
-                    <td>Diego</td>
-                    <td>-</td>
-                    <td>Gustavo</td>
-                    <td>Pr Kelton</td>
+                    <td>Romário e banda</td>
                 </tr>
 
             </tbody>
