Troca de escala

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -13,12 +13,12 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (28)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (07)</h1>
 
         </div>
         <div class="container-musicas">
             
-            <div class="menu">
+            <!--<div class="menu">
             <div class="musica1"><a href="https://www.letras.mus.br/ana-nobrega/oceanos-oceans/" target="_blank">Oceanos</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/1XqHlWsMThA?si=bt-sIykf49fBykEx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
@@ -27,7 +27,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/E2ElsKTZV8A?si=yk11ebAFoJHuPkGj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
             <div class="musica3"><a href="https://www.letras.mus.br/fernanda-brum/87875/" target="_blank">Apenas um toque</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/3ozb8z3qva0?si=vJVMeYtWARyldqye" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3ozb8z3qva0?si=vJVMeYtWARyldqye" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> -->
 
         </div>
 
