Troca de música

--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -18,16 +18,16 @@
         </div>
         <div class="container-musicas">
             
-            <!--<div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/ana-nobrega/oceanos-oceans/" target="_blank">Oceanos</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/1XqHlWsMThA?si=bt-sIykf49fBykEx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="menu">
+            <div class="musica1"><a href="https://www.letras.mus.br/marcelo-markes/eu-tenho-voce/" target="_blank">Eu tenho você</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bWUaznyZLd0?si=K1HrqEUpfOaysyvO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/thamires-garcia/a-tua-mesa-cura/" target="_blank">A tua mesa cura</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/E2ElsKTZV8A?si=yk11ebAFoJHuPkGj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/rose-nascimento/351877/" target="_blank">Portões celestiais</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/L6OFSFtidxM?si=_56ZyfQ0120RNseK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/fernanda-brum/87875/" target="_blank">Apenas um toque</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/3ozb8z3qva0?si=vJVMeYtWARyldqye" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> -->
+            <div class="musica3"><a href="https://www.letras.mus.br/cassiane/1945350/" target="_blank">Se Cristo comigo vai</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZdouilUXaY4?si=wiD8TxMdDr7-sZc1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
         </div>
 
