--- a/Louvores-domingo/domingo-index.html
+++ b/Louvores-domingo/domingo-index.html
@@ -24,11 +24,14 @@
                 <div class="musica1"><a href="https://www.letras.mus.br/ronaldo-bezerra/324329/" target="_blank">Tu és Santo</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/michael-w-smith-musicas/tu-es-santo-principe-da-paz/#key=8" target="_blank" class="tom">F</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/gKY85RvJPsE?si=Y8gLSF0n_GuJCTac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                <div class="musica2"><a href="" target="_blank">Quem é como nosso Deus</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
+                <div class="musica2"><a href="https://www.letras.mus.br/nivea-soares/quem-e-como-nosso-deus/" target="_blank">Quem é como nosso Deus</a> <p class="nome">Tom <a href="https://www.cifraclub.com.br/nivea-soares/quem-e-como-nosso-deus/" target="_blank" class="tom">Dm</a></p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/QRilv78Rroc?si=TOgHknhwRqgmevZW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-                    <div class="musica3"><a href="https://www.cifraclub.com.br/projeto-vida/agnus-dei-pode-morar-aqui-pot-pourri/" target="_blank">Agnus dei + Pode morar aqui</a> <p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                    <div class="musica3"><a href="https://www.cifraclub.com.br/projeto-vida/agnus-dei-pode-morar-aqui-pot-pourri/" target="_blank">Agnus dei + Pode morar aqui</a> <p class="nome">Tom<a href="https://www.cifraclub.com.br/projeto-vida/agnus-dei-pode-morar-aqui-pot-pourri/#key=7" target="_blank" class="tom">E</a></p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/GThXZkp7Dbk?si=Rzu3fJa82aIodF2H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+                        <div class="musica4"><a href="https://www.letras.mus.br/diante-do-trono/1708842/" target="_blank">Canção do apocalipse</a> <p class="nome">Tom<a href="https://www.cifraclub.com.br/diante-do-trono/cancao-do-apocalipse/#key=3" target="_blank" class="tom">C</a></p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/5j0arvaKdqk?si=B3Ryt5EnQ1Q7yIPz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
                         
         </div>
              
