--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -13,21 +13,21 @@
     <main>
         <div class="container">
             <img src="fotos/guitarra-eletrica 150 x 150.png" alt="" class="guitarra">
-            <h1 class="titulo">Louvores de sexta-feira (07)</h1>
+            <h1 class="titulo">Louvores de sexta-feira (14)</h1>
 
         </div>
         <div class="container-musicas">
             
             <div class="menu">
-            <div class="musica1"><a href="https://www.letras.mus.br/marcelo-markes/eu-tenho-voce/" target="_blank">Eu tenho você</a> <p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/bWUaznyZLd0?si=K1HrqEUpfOaysyvO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="musica1"><a href="https://www.letras.mus.br/renascer-praise/escape/" target="_blank">Escape</a> <p class="nome">Tom <a href="https://www.cifraclub.com.br/renascer-praise/escape/#key=0" target="_blank" class="tom">A</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vM2A2XEm9TE?si=UFoAAytSZ9JxyB4y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/rose-nascimento/351877/" target="_blank">Portões celestiais</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/L6OFSFtidxM?si=_56ZyfQ0120RNseK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/leandro-soares/todavia-me-alegrarei/" target="_blank">Todavia me alegrarei</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/K5ONBQtThxY?si=Tkjc-i8yYFyWAiG-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/cassiane/1945350/" target="_blank">Se Cristo comigo vai</a><p class="nome">Tom <a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZdouilUXaY4?si=wiD8TxMdDr7-sZc1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
+            <div class="musica3"><a href="https://www.letras.mus.br/casa-do-oleiro-adoracao/fazer-morada-part-lukas-agustinho/" target="_blank">Fazer morada</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/casa-do-oleiro-adoracao/fazer-morada/#key=3" target="_blank" class="tom">C</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/woFF1j-0Ieo?si=Plu8bLqF8gQ2rsde" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> 
 
         </div>
 
