--- a/Louvores-sexta/louvor-sexta.index.html
+++ b/Louvores-sexta/louvor-sexta.index.html
@@ -19,14 +19,14 @@
         <div class="container-musicas">
             
             <div class="menu">
-           <!-- <div class="musica1"><a href="https://www.letras.mus.br/renascer-praise/escape/" target="_blank">Escape</a> <p class="nome">Tom <a href="https://www.cifraclub.com.br/renascer-praise/escape/#key=0" target="_blank" class="tom">A</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/vM2A2XEm9TE?si=UFoAAytSZ9JxyB4y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="musica1"><a href="https://www.letras.mus.br/gabi-sampaio/teu-toque/" target="_blank">Teu toque</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/gabi-sampaio/teu-toque/#key=11" target="_blank" class="tom">Ab</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/i1Tz2jny2mw?si=n57ImywGdtmBFJ-u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
-            <div class="musica2"><a href="https://www.letras.mus.br/leandro-soares/todavia-me-alegrarei/" target="_blank">Todavia me alegrarei</a><p class="nome">Tom<a href="" target="_blank" class="tom">?</a></p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/K5ONBQtThxY?si=Tkjc-i8yYFyWAiG-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="musica2"><a href="https://www.letras.mus.br/harpa-crista/1006401/" target="_blank">Renova-me</a><p class="nome">Tom<a href="https://www.cifraclub.com.br/aline-barros/renova-me/" target="_blank" class="tom">D</a></p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BFi2rqDVNBc?si=BNrYMEdr2dkLNnIR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <div class="musica3"><a href="https://www.letras.mus.br/casa-do-oleiro-adoracao/fazer-morada-part-lukas-agustinho/" target="_blank">Fazer morada</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/casa-do-oleiro-adoracao/fazer-morada/#key=3" target="_blank" class="tom">C</a></p>
+            <!--<div class="musica3"><a href="https://www.letras.mus.br/casa-do-oleiro-adoracao/fazer-morada-part-lukas-agustinho/" target="_blank">Fazer morada</a><p class="nome">Tom <a href="https://www.cifraclub.com.br/casa-do-oleiro-adoracao/fazer-morada/#key=3" target="_blank" class="tom">C</a></p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/woFF1j-0Ieo?si=Plu8bLqF8gQ2rsde" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div> -->
 
         </div>
